--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -7,6 +7,9 @@
 
     <title>Terms of service</title>
 
+    <!-- favicon -->
+    <link rel="icon" type="icon" href="./icons/business/leather.png">
+
     <!-- my-styles -->
     <link rel="stylesheet" href="./styles/common-main.css">
     <link rel="stylesheet" href="./styles/common1.css">
