--- a/thank-you.html
+++ b/thank-you.html
@@ -8,7 +8,7 @@
     <title>Thank you</title>
 
     <!-- favicon -->
-    <link rel="icon" type="icon" href="./icons/logo.png">
+    <link rel="icon" type="icon" href="./icons/business/leather.png">
 
     <!-- fonts -->
     <!-- font1 -->
@@ -37,6 +37,8 @@
         p {
             color: white;
             font-size: 30px;
+            text-align: center;
+            line-height: 2rem;
         }
     </style>
 
