--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>About</title>
 
     <!-- favicon -->
-    <link rel="icon" type="icon" href="./icons/logo.png">
+    <link rel="icon" type="icon" href="./icons/business/leather.png">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -30,9 +30,11 @@
 
 
     <!-- my-styles -->
-    <link rel="stylesheet" href="./styles/style-about.css">
     <link rel="stylesheet" href="./styles/common-main.css">
     <link rel="stylesheet" href="./styles/common1.css">
+    <link rel="stylesheet" href="./styles/style-about.css">
+
+    <!-- my-bootstrap -->
     <link rel="stylesheet" href="./styles/my-bootstrap.css">
 
     <!-- SASS -->
@@ -45,34 +47,6 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">Nkwali Yenkosi</a>
 
-            <!-- add social media logos -->
-            <div class="social-media center">
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com" target="_blank">
-                            <img class="icons" src="./icons/socials/ig.png" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href=" https://www.facebook.com" target="_blank">
-                            <img class="icons" src="./icons/socials/fb.png" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.tiktok.com" target="_blank">
-                            <img class="icons" src="./icons/socials/tk.png" alt="">
-                        </a>
-                    </li>
-                    <!-- twitter -->
-                    <li>
-                        <a href="https://www.tiktok.com" target="_blank">
-                            <img class="icons" src="./icons/socials/twitter.png" alt="">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -82,11 +56,7 @@
             <!-- offcanvas -->
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Nkwali Yenkosi</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
+
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
@@ -119,36 +89,25 @@
 
     <!-- MAIN -->
     <main>
-        <div class="container full-bg-img center">
+        <div class="full-bg-img center">
             <section class="overlay center">
                 <div>
+                    <h2>Welcome to Nkwali Yenkosi</h2>
+
                     <p>
-                        Welcome to FitFlavors! We are dedicated to revolutionizing your approach to food and fitness,
-                        offering a seamless blend
-                        of nutritious, delicious meals and tailored workout plans. At FitFlavors, we believe that true
-                        health is a holistic
-                        journey, where nourishing your body with wholesome, flavorful meals is just as essential as
-                        breaking a sweat.
+                        Discover an exquisite collection of handcrafted leather
+                        goods designed to elevate your everyday. From timeless wallets to rugged backpacks,
+                        our products are meticulously
+                        crafted using premium, ethically sourced leather.
                     </p>
 
                     <p>
-                        Our
-                        culinary experts and fitness coaches work hand-in-hand to create a harmonious balance, ensuring
-                        you not only meet your
-                        fitness goals but savor every bite along the way.
+                        Each piece embodies a perfect blend of tradition and innovation,
+                        promising durability and elegance. Explore our range and experience the unmatched quality of
+                        genuine leather.
                     </p>
-
-
-                    <p>
-                        From vibrant salads to protein-packed power bowls, our menu is
-                        designed to cater to diverse tastes and dietary preferences. Whether you're a seasoned athlete
-                        or just starting your
-                        wellness journey, we're here to empower you with the tools and flavors to thrive.
-                    </p>
-
                     <p id="end">
-                        Step into FitFlavors, where health
-                        meets taste, and let's embark on this transformative adventure together!
+                        Elevate your lifestyle with Nkwali Yenkosi.
                     </p>
                 </div>
             </section>
