--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
     <title>Checkout</title>
 
     <!-- favicon -->
-    <link rel="icon" type="icon" href="./icons/logo.png">
+    <link rel="icon" type="icon" href="./icons/business/leather.png">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -55,26 +55,26 @@
 
                 <div class="center">
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="Name">
+                        <input required type="text" class="form-control" id="floatingInput" placeholder="Name">
                         <label for="floatingInput">Name</label>
                     </div>
                 </div>
 
                 <div class="center">
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="Email">
+                        <input required type="email" class="form-control" id="floatingInput" placeholder="Email">
                         <label for="floatingInput">Email address</label>
                     </div>
                 </div>
 
                 <div class="center">
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Phone number">
+                        <input required type="text" class="form-control" id="floatingPassword"
+                            placeholder="Phone number">
                         <label for="floatingPassword">Phone number</label>
                     </div>
                 </div>
             </section>
-
 
             <!-- shipping info -->
             <section id="d-shipping">
