--- a/diy-methods.html
+++ b/diy-methods.html
@@ -8,7 +8,7 @@
     <title>DIY Methods</title>
 
     <!-- favicon -->
-    <link rel="icon" type="icon" href="./icons/logo.png">
+    <link rel="icon" type="icon" href="./icons/business/leather.png">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -28,11 +28,13 @@
         rel="stylesheet">
 
 
+    <!-- my-bootstrap -->
+    <link rel="stylesheet" href="./styles/my-bootstrap.css">
+
     <!-- my-styles -->
     <link rel="stylesheet" href="./styles/style-diy.css">
     <link rel="stylesheet" href="./styles/common-main.css">
     <link rel="stylesheet" href="./styles/common1.css">
-    <link rel="stylesheet" href="./styles/my-bootstrap.css">
 
     <!-- SASS -->
     <link rel="stylesheet" href="./styles/main.css">
@@ -44,34 +46,6 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">Nkwali Yenkosi</a>
 
-            <!-- add social media logos -->
-            <div class="social-media center">
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com" target="_blank">
-                            <img class="icons" src="./icons/socials/ig.png" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href=" https://www.facebook.com" target="_blank">
-                            <img class="icons" src="./icons/socials/fb.png" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.tiktok.com" target="_blank">
-                            <img class="icons" src="./icons/socials/tk.png" alt="">
-                        </a>
-                    </li>
-                    <!-- twitter -->
-                    <li>
-                        <a href="https://www.tiktok.com" target="_blank">
-                            <img class="icons" src="./icons/socials/twitter.png" alt="">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -81,11 +55,7 @@
             <!-- offcanvas -->
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Nkwali Yenkosi</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
+
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
@@ -116,41 +86,39 @@
 
 
     <!-- MAIN -->
-    <main>
-        <div id="for-img1" class="container full-bg-img center">
-            <section class="overlay center">
-                <div>
+    <main class="center">
+        <section class="center">
+            <!-- side card1 -->
+            <div class="row g-0 bg-body-secondary position-relative">
+                <div class="col-md-6 mb-md-0 p-md-4 center">
+                    <img src="./styles/images/more/jackets1 (8).webp" class="w-100" alt="...">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0">
+                    <h5 class="mt-0"> Crafting Excellence in Leather </h5>
+
                     <p>
-                        Welcome to FitFlavors! We are dedicated to revolutionizing your approach to food and fitness,
-                        offering a seamless blend
-                        of nutritious, delicious meals and tailored workout plans. At FitFlavors, we believe that true
-                        health is a holistic
-                        journey, where nourishing your body with wholesome, flavorful meals is just as essential as
-                        breaking a sweat.
+                        Empower Your Creativity with Premium Leather.
                     </p>
 
                     <p>
-                        Our
-                        culinary experts and fitness coaches work hand-in-hand to create a harmonious balance, ensuring
-                        you not only meet your
-                        fitness goals but savor every bite along the way.
+                        At Nkwali Yenkosi, we believe in giving you the tools to bring
+                        your leather creations to life. Choose from our curated
+                        selection of top-quality, ethically sourced leather hides.
+                        From supple calfskin to rugged full-grain, find the perfect
+                        canvas for your vision. Our range of colors and finishes
+                        ensures endless possibilities.
                     </p>
-
 
                     <p>
-                        From vibrant salads to protein-packed power bowls, our menu is
-                        designed to cater to diverse tastes and dietary preferences. Whether you're a seasoned athlete
-                        or just starting your
-                        wellness journey, we're here to empower you with the tools and flavors to thrive.
-                    </p>
-
-                    <p id="end">
-                        Step into FitFlavors, where health
-                        meets taste, and let's embark on this transformative adventure together!
+                        Whether you're a seasoned
+                        artisan or a budding craftsman, Nkwali Yenkosi
+                        provides the foundation for your unique leather projects. Elevate your
+                        craftsmanship with our exceptional leather,
+                        and let your creativity thrive. Start your journey with us today.
                     </p>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
 
 
