--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Nkwali Yenkosi</title>
     <base target="_blank">
     <!-- started: 02.05.23 -->
-    <!-- updated: 26.09.23 -->
+    <!-- updated: 03.10.23 -->
     <!-- created by trpl-A -->
 
     <!-- favicon -->
-    <link rel="icon" type="icon" href="./icons/logo.png">
+    <link rel="icon" type="icon" href="./icons/business/leather.png">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -43,6 +43,7 @@
 
     <!-- SASS -->
     <link rel="stylesheet" href="./styles/main.css">
+    <!-- ================================================== -->
 
     <!-- my-script -->
     <script>
@@ -75,7 +76,6 @@
         window.addEventListener('load', checkNetworkStatus);
         // window.addEventListener('load', openGoogle);
     </script>
-
 </head>
 
 <body>
@@ -83,34 +83,6 @@
     <nav class="navbar navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Nkwali Yenkosi</a>
-
-            <!-- add social media logos -->
-            <div class="social-media center">
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com" target="_blank">
-                            <img class="icons" src="./icons/socials/ig.png" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href=" https://www.facebook.com" target="_blank">
-                            <img class="icons" src="./icons/socials/fb.png" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.tiktok.com" target="_blank">
-                            <img class="icons" src="./icons/socials/tk.png" alt="">
-                        </a>
-                    </li>
-                    <!-- twitter -->
-                    <li>
-                        <a href="https://www.tiktok.com" target="_blank">
-                            <img class="icons" src="./icons/socials/twitter.png" alt="">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
 
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
@@ -150,7 +122,7 @@
     </nav>
 
     <!-- HEADER -->
-    <header id="header-index" class="full-bg-img center">
+    <header class="full-bg-img center">
         <div class="overlay center">
             <h1>Nkwali Yenkosi</h1>
         </div>
@@ -159,78 +131,101 @@
     <!-- MAIN -->
     <main>
         <!-- section1 -->
-        <div class="container center">
+        <!-- <div class="container center">
             <div id="inner1">
                 <div class="text">
-                    <h2>Welcome to FitFlavors!</h2>
+                    <h2>Welcome to Nkwali Yenkosi</h2>
+
                     <p>
-                        We are dedicated to revolutionizing your approach to food and fitness.
+                        Discover an exquisite collection of handcrafted leather
+                        goods designed to elevate your everyday. From timeless wallets to rugged backpacks,
+                        our products are meticulously
+                        crafted using premium, ethically sourced leather.
                     </p>
 
                     <p>
-                        At FitFlavors, we believe that true
-                        health is a holistic
-                        journey, where nourishing your body with wholesome,
-                        flavorful meals is just as essential as
-                        breaking a sweat.
-                    </p>
-
-                    <p>
-                        Whether you're a seasoned athlete
-                        or just starting your
-                        wellness journey, we're here to empower
-                        you with the tools and flavors to thrive.
-                    </p>
-
-                    <p>
-                        Step into FitFlavors, where health
-                        meets taste, and let's embark on this
-                        transformative adventure together!
+                        Each piece embodies a perfect blend of tradition and innovation,
+                        promising durability and elegance. Explore our range and experience the unmatched quality of
+                        genuine leather. Elevate
+                        your lifestyle with Nkwali Yenkosi.
                     </p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- section2 -->
-        <div class="container center">
-            <!-- side card1 -->
-            <div>
-                <div class="row g-0 bg-body-secondary position-relative">
-                    <div class="col-md-6 mb-md-0 p-md-4 center">
-                        <img src="./styles/images/home-img (1).jpg" class="w-100" alt="...">
-                    </div>
-                    <div class="col-md-6 p-4 ps-md-0">
-                        <h5 class="mt-0">Columns with stretched link</h5>
-                        <p>Another instance of placeholder content for this other custom component. It is intended to
-                            mimic what some
-                            real-world content would look like, and we're using it here to give the component a bit of
-                            body and size.
-                        </p>
-                        <div class="center btn-link">
-                            <a id="" class="center" href="./about.html">Learn About Us</a>
+        <div class="center" id="center-diff">
+            <div id="center-diff1">
+                <div id="center-diff2">
+                    <!-- side card1 -->
+                    <div class="row g-0 bg-body-secondary position-relative">
+                        <div class="col-md-6 mb-md-0 p-md-4 center">
+                            <!-- <div class="col-md-6 mb-md-0 p-md-4"> -->
+                            <img src="./styles/images/home-img (1).jpg" class="w-100" alt="...">
                         </div>
-                        <!-- <a href="#" class="stretched-link">Go somewhere</a> -->
-                    </div>
-                </div>
+                        <div class="col-md-6 p-4 ps-md-0">
+                            <h5 class="mt-0">About us</h5>
+                            <p>
+                                Discover an exquisite collection of handcrafted leather
+                                goods designed to elevate your everyday. From timeless wallets to rugged backpacks,
+                                our products are meticulously
+                                crafted using premium, ethically sourced leather.
+                            </p>
 
-                <!-- side card2 -->
-                <div class="row g-0 bg-body-secondary position-relative">
-
-                    <div class="col-md-6 p-4 ps-md-0">
-                        <h5 class="mt-0">Columns with stretched link</h5>
-                        <p>Another instance of placeholder content for this other custom component. It is intended to
-                            mimic what some
-                            real-world content would look like, and we're using it here to give the component a bit of
-                            body and size.
-                        </p>
-
-                        <div class="center btn-link">
-                            <a id="" class="center" href="./shop-now.html">Shop Now</a>
+                            <div class="center btn-link">
+                                <a id="" class="center" href="./about.html">Learn About Us</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 mb-md-0 p-md-4 center">
-                        <img src="./styles/images/person1.jpg" class="w-100" alt="...">
+
+                    <!-- side card1.5, temp -->
+                    <div class="row g-0 bg-body-secondary position-relative">
+                        <div class="col-md-6 mb-md-0 p-md-4 center">
+                            <!-- <div class="col-md-6 mb-md-0 p-md-4"> -->
+                            <img src="./styles/images/person1.jpg" class="w-100" alt="...">
+                        </div>
+                        <div class="col-md-6 p-4 ps-md-0">
+                            <h5 class="mt-0">Shop now</h5>
+                            <p>
+                                Each piece embodies a perfect blend of tradition and innovation,
+                                promising durability and elegance. Explore our range and experience the unmatched
+                                quality of
+                                genuine leather.
+                            </p>
+
+                            <p>
+                                Elevate your lifestyle with Nkwali Yenkosi.
+                            </p>
+
+                            <div class="center btn-link">
+                                <a id="" class="center" href="./shop-now.html">Shop Now</a>
+                            </div>
+                        </div>
                     </div>
+
+
+                    <!-- side card2 -->
+                    <!-- <div class="row g-0 bg-body-secondary position-relative">
+                                    <div class="col-md-6 p-4 ps-md-0">
+                                        <h5 class="mt-0">Shop now</h5>
+                
+                                        <p>
+                                            Each piece embodies a perfect blend of tradition and innovation,
+                                            promising durability and elegance. Explore our range and experience the unmatched quality of
+                                            genuine leather.
+                                        </p>
+                
+                                        <p>
+                                            Elevate your lifestyle with Nkwali Yenkosi.
+                                        </p>
+                                        <div class="center btn-link">
+                                            <a id="" class="center" href="./shop-now.html">Shop Now</a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-md-0 p-md-4 center">
+                                        <img src="./styles/images/person1.jpg" class="w-100" alt="...">
+                                    </div>
+                                </div> -->
                 </div>
             </div>
         </div>
@@ -243,8 +238,6 @@
                 </div>
             </div>
         </div>
-
-
     </main>
 
     <!-- FOOTER -->
@@ -258,11 +251,37 @@
             </div>
 
             <div class="contact contact-info">
-                <p>FoodAndFitness@gmail.com</p>
+                <p>NkwaliYenkosi@gmail.com</p>
                 <p>+27 000 000 001</p>
-                <p>FoodAndFitness.com</p>
+                <p>NkwaliYenkosi.com</p>
                 <p>3301 Sweet Scent Street, Sugar Rush</p>
             </div>
+        </div>
+
+        <div class="social-media center">
+            <ul>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img id="icon-ig" class="icons" src="./icons/socials/ig.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href=" https://www.facebook.com" target="_blank">
+                        <img class="icons" src="./icons/socials/fb.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.tiktok.com" target="_blank">
+                        <img class="icons" src="./icons/socials/tk.png" alt="">
+                    </a>
+                </li>
+                <!-- twitter -->
+                <li>
+                    <a href="https://www.tiktok.com" target="_blank">
+                        <img id="icon-twitter" class="icons" src="./icons/socials/twitter.png" alt="">
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer>
     <!-- created by trpl-A -->
