--- a/checkout.html
+++ b/checkout.html
@@ -35,18 +35,19 @@
     <link rel="stylesheet" href="./styles/my-bootstrap.css">
 
     <!-- my-script -->
-    <script src="scripts/scriptCheckout.js"></script>
+    <!-- <script src="scripts/scriptCheckout.js"></script> -->
+    <!-- <script src="scripts/scriptGetInfo.js"></script> -->
 </head>
 
 <body>
-    <header class="">
+    <header class="full-bg-img">
         <div class="overlay center">
             <h1>Check out</h1>
         </div>
     </header>
 
     <div class="form center">
-        <form action="" method="post" id="form" class="">
+        <form action="" method="get" id="form" class="">
             <!-- user info -->
             <section id="d-user">
                 <div class="center">
@@ -55,22 +56,21 @@
 
                 <div class="center">
                     <div class="form-floating mb-3">
-                        <input required type="text" class="form-control" id="floatingInput" placeholder="Name">
+                        <input required type="text" class="form-control" id="name" placeholder="Name">
                         <label for="floatingInput">Name</label>
                     </div>
                 </div>
 
                 <div class="center">
                     <div class="form-floating mb-3">
-                        <input required type="email" class="form-control" id="floatingInput" placeholder="Email">
+                        <input required type="email" class="form-control" id="email" placeholder="Email">
                         <label for="floatingInput">Email address</label>
                     </div>
                 </div>
 
                 <div class="center">
                     <div class="form-floating">
-                        <input required type="text" class="form-control" id="floatingPassword"
-                            placeholder="Phone number">
+                        <input required type="text" class="form-control" id="phone-num" placeholder="Phone number">
                         <label for="floatingPassword">Phone number</label>
                     </div>
                 </div>
@@ -84,24 +84,25 @@
 
                 <div class="center">
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Province">
+                        <input required type="text" class="form-control" id="floatingPassword" placeholder="Province">
                         <label for="floatingPassword">Province</label>
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="City">
+                        <input required type="text" class="form-control" id="floatingInput" placeholder="City">
                         <label for="floatingInput">City</label>
                     </div>
                 </div>
 
                 <div class="center">
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="Suburban area">
+                        <input required type="text" class="form-control" id="floatingInput" placeholder="Suburban area">
                         <label for="floatingInput">Suburban area</label>
                     </div>
 
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Complete address">
+                        <input required type="text" class="form-control" id="floatingPassword"
+                            placeholder="Complete address">
                         <label for="floatingPassword">Complete address</label>
                     </div>
                 </div>
@@ -116,7 +117,6 @@
                 </div>
             </section>
 
-
             <!-- billing details -->
             <section id="d-bill">
                 <div class="center">
@@ -125,24 +125,26 @@
 
                 <div class="center">
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="Name on card">
+                        <input required type="text" class="form-control" id="floatingInput" placeholder="Name on card">
                         <label for="floatingInput">Name on card</label>
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="Credit card number">
+                        <input required type="text" class="form-control" id="floatingInput"
+                            placeholder="Credit card number">
                         <label for="floatingInput">Credit card number</label>
                     </div>
                 </div>
 
                 <div class="center">
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Expire date">
+                        <input required type="text" class="form-control" id="floatingPassword"
+                            placeholder="Expire date">
                         <label for="floatingPassword">Expire date</label>
                     </div>
 
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="CVV">
+                        <input required type="text" class="form-control" id="floatingPassword" placeholder="CVV">
                         <label for="floatingPassword">CVV</label>
                     </div>
                 </div>
@@ -152,25 +154,33 @@
             <section id="confirmation">
                 <p>Do you agree to our <a href="terms-of-service.html">Terms of serivice</a>? </p>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <input required class="form-check-input" type="radio" name="flexRadioDefault"
+                        id="flexRadioDefault1">
                     <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
+                        Yes
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
                     <label class="form-check-label" for="flexRadioDefault2">
-                        Default checked radio
+                        No
                     </label>
                 </div>
             </section>
 
             <div class="center">
-                <!-- <button id="submit" type="button" onclick="v()">Log in</button> -->
-                <button id="submit" type="button" onclick="orderComplete()">Ship off</button>
+                <!-- <button id="submit" type="submit" onsubmit="showI()">Place order</button> -->
+                <!-- <button id="submit" type="submit">Place order</button> -->
+
+                <button id="submit" type="submit" onsubmit="orderComplete()">Ship off</button>
+                <!-- onclick="orderComplete()" -->
             </div>
         </form>
     </div>
 </body>
+
+<script src="scripts/s.js">
+
+</script>
 
 </html>
