--- a/shop-now.html
+++ b/shop-now.html
@@ -32,15 +32,15 @@
     <!-- my-styles -->
     <link rel="stylesheet" href="./styles/common-main.css">
     <link rel="stylesheet" href="./styles/common1.css">
-    <link rel="stylesheet" href="./styles/style-shop.css">
     <link rel="stylesheet" href="./styles/screensize-shop.css">
-    <!-- <link rel="stylesheet" href="./styles/animate-bootstrap.css"> -->
 
     <!-- style-bootstrap -->
     <link rel="stylesheet" href="./styles/my-bootstrap.css">
 
     <!-- SASS -->
     <link rel="stylesheet" href="./styles/main.css">
+
+    <link rel="stylesheet" href="./styles/style-shop.css">
 </head>
 
 <body>
@@ -49,6 +49,25 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">Nkwali Yenkosi</a>
 
+            <!-- <div class="social-media">
+                <ul>
+                    <li>
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img id="icon-ig" class="icons" src="./icons/socials/ig.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href=" https://www.facebook.com" target="_blank">
+                            <img class="icons" src="./icons/socials/fb.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.tiktok.com" target="_blank">
+                            <img id="icon-twitter" class="icons" src="./icons/socials/twitter.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div> -->
 
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
@@ -152,6 +171,7 @@
     <main class="">
         <div class="center">
             <h2>Shop Now</h2>
+            <!-- <h2>Products</h2> -->
         </div>
 
         <!-- row1 -->
@@ -159,15 +179,21 @@
             <div class="card-group">
                 <!-- item1 -->
                 <div class="card" style="width: 18rem;">
-                    <img src="./styles/images/Style-05_female-02-Double-breasted.png" class="card-img-top" alt="...">
+                    <img src="./styles/images/bag (1).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Double breasted (female)</h5>
-                        <p class="card-text">R2000</p>
+                        <h5 class="card-title">Bag 1</h5>
+                        <p class="card-text">R 2 000</p>
                         <div class="center">
-                            <button onclick="setItem('item1')" type="button" class="" data-bs-toggle="modal"
+                            <button onclick="setItem('item1')" type="button" class="cart-btn" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                Buy product
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
                             </button>
+
                         </div>
                     </div>
                 </div>
@@ -176,13 +202,18 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/bag (1).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Bag</h5>
-                        <p class="card-text">R2 500</p>
+                        <h5 class="card-title">Bag 2</h5>
+                        <p class="card-text">R 2 500</p>
                         <!-- button -->
                         <div class="center">
                             <button onclick="setItem('item2')" type="button" class="" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                Buy product
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -192,13 +223,18 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/bag (2).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Bag</h5>
-                        <p class="card-text">R2 000</p>
+                        <h5 class="card-title">Bag 3</h5>
+                        <p class="card-text">R 2 000</p>
                         <!-- button -->
                         <div class="center">
                             <button onclick="setItem('item3')" type="button" class="" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                Buy product
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -209,35 +245,63 @@
         <!-- row2 -->
         <section class="center">
             <div class="card-group">
+
+                <!-- item4 -->
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/jacket (1).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Jacket</h5>
-                        <p class="card-text">R2 300</p>
+                        <h5 class="card-title">Jacket 1</h5>
+                        <p class="card-text">R 2 300</p>
                         <div class="center">
-                            <button>Buy product</button>
+                            <button onclick="setItem('item4')" type="button" class="" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
 
+                <!-- item5 -->
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/jacket (2).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Jacket 1</h5>
-                        <p class="card-text">R3 000</p>
+                        <h5 class="card-title">Jacket 2</h5>
+                        <p class="card-text">R 3 000</p>
                         <div class="center">
-                            <button>Buy product</button>
+                            <button onclick="setItem('item5')" type="button" class="" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
 
+                <!-- item6 -->
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/jacket (6).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Jacket</h5>
-                        <p class="card-text">R2 350</p>
+                        <h5 class="card-title">Jacket 3</h5>
+                        <p class="card-text">R 2 350</p>
                         <div class="center">
-                            <button>Buy product</button>
+                            <button onclick="setItem('item6')" type="button" class="" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -247,35 +311,62 @@
         <!-- row3 -->
         <section class="center">
             <div class="card-group">
+                <!-- item7 -->
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/jacket (3).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Jacket</h5>
-                        <p class="card-text">R2 300</p>
+                        <h5 class="card-title">Jacket 4</h5>
+                        <p class="card-text">R 2 300</p>
                         <div class="center">
-                            <button>Buy product</button>
+                            <button onclick="setItem('item7')" type="button" class="" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
 
+                <!-- item8 -->
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/jacket (4).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Jacket 1</h5>
-                        <p class="card-text">R3 000</p>
+                        <h5 class="card-title">Jacket 5</h5>
+                        <p class="card-text">R 3 000</p>
                         <div class="center">
-                            <button>Buy product</button>
+                            <button onclick="setItem('item8')" type="button" class="" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
 
+                <!-- item9 -->
                 <div class="card" style="width: 18rem;">
                     <img src="./styles/images/jacket (5).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Jacket</h5>
-                        <p class="card-text">R2 350</p>
+                        <h5 class="card-title">Jacket 6</h5>
+                        <p class="card-text">R 2 500</p>
                         <div class="center">
-                            <button>Buy product</button>
+                            <button onclick="setItem('item9')" type="button" class="" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-cart" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
