--- a/brick-mortar.html
+++ b/brick-mortar.html
@@ -117,8 +117,6 @@
         </section>
     </main>
 
-
-
     <!-- FOOTER -->
     <footer>
         <div id="contact-details" class="center">
@@ -130,9 +128,9 @@
             </div>
 
             <div class="contact contact-info">
-                <p>FoodAndFitness@gmail.com</p>
+                <p>NkwaliYenkosi@gmail.com</p>
                 <p>+27 000 000 001</p>
-                <p>FoodAndFitness.com</p>
+                <p>NkwaliYenkosi.com</p>
                 <p>3301 Sweet Scent Street, Sugar Rush</p>
             </div>
         </div>
