--- a/about.html
+++ b/about.html
@@ -126,9 +126,9 @@
             </div>
 
             <div class="contact contact-info">
-                <p>FoodAndFitness@gmail.com</p>
+                <p>NkwaliYenkosi@gmail.com</p>
                 <p>+27 000 000 001</p>
-                <p>FoodAndFitness.com</p>
+                <p>NkwaliYenkosi.com</p>
                 <p>3301 Sweet Scent Street, Sugar Rush</p>
             </div>
         </div>
