--- a/shop-now.html
+++ b/shop-now.html
@@ -166,12 +166,11 @@
     </div>
 
 
-
     <!-- MAIN -->
     <main class="">
         <div class="center">
-            <h2>Shop Now</h2>
-            <!-- <h2>Products</h2> -->
+            <!-- <h2>Shop Now</h2> -->
+            <h2>Products</h2>
         </div>
 
         <!-- row1 -->
@@ -392,9 +391,9 @@
             </div>
 
             <div class="contact contact-info">
-                <p>FoodAndFitness@gmail.com</p>
+                <p>NkwaliYenkosi@gmail.com</p>
                 <p>+27 000 000 001</p>
-                <p>FoodAndFitness.com</p>
+                <p>NkwaliYenkosi.com</p>
                 <p>3301 Sweet Scent Street, Sugar Rush</p>
             </div>
         </div>
